feat: Refine chat message action button disabling logic to only enable edit for the last user message and regenerate for the last message.

--- a/聖女泥酔スクープ記事.md
+++ b/聖女泥酔スクープ記事.md
@@ -1,38 +1,67 @@
-# 【激写】「清廉の聖女」エイラ様、路地裏で泥酔・路上寝の醜態！ 慌てる側近の悲鳴も虚しく…
+# 【激写・本誌独占】「清廉の聖女」エイラ様、路地裏で泥酔・路上寝の醜態！ 吐瀉物にまみれた"聖なる"一夜
 
-**国民の癒やしであり、「清貧と貞淑の象徴」として崇められる聖女エイラ（19）。**
-**しかし本誌は、彼女の”裏の顔”を捉えた衝撃的な一枚を入手した。そこには、神聖な法衣を涙と吐瀉物で汚し、路地裏で大の字に転がる彼女の姿があった。**
+**国民の9割が信奉し、「歩く浄化槽」「清貧と貞淑の擬人化」とまで謳われる聖女エイラ（19）。**
+**しかし本誌は、その神聖なヴェールを容赦なく剥ぎ取る、衝撃的すぎる瞬間を捉えた。深夜の路地裏、安酒と汚物にまみれて大の字でいびきをかくその姿に、あなたは明日も祈りを捧げることができるだろうか？**
 
 ---
 
-## 「ヒールじゃストレスは治せねえんだよ！」
+## 「ヒールじゃ……ヒック！ ストレスは癒せねえんだよぉおお！」
 
-事件が起きたのは先週末の深夜2時。王都でも治安が悪いとされる歓楽街の裏路地だ。
-「うわぁああん！ もうやだぁあ！ 王子も宰相も、みんな私にばっかり仕事押し付けてぇえ！」
+草木も眠る丑三つ時。王都の掃き溜め、治安最悪とされる歓楽街「暗黒通り」の最奥部で、その事件は起きた。
+腐った果実とドブネズミの死骸が転がるような裏路地に、場違いなほど神聖な、しかし酷く呂律の回っていない乙女の絶叫が響き渡った。
 
-静まり返った路地に、可愛らしい（しかし呂律の回っていない）絶叫が響き渡った。
-そこにいたのは、なんと聖女エイラその人である。
-普段の清楚な微笑みはどこへやら、彼女は安酒の空き瓶（度数40%のドワーフ火酒）を抱きしめ、石畳の上にゴロゴロと転がっていた。
+「うっ……うう……王子も宰相もバカばっかりぃ！ 私をなんだと思ってるの！ 高級ポーション製造機じゃないんだからぁ！」
 
-## 必死の隠蔽工作を図る側近
+そこにいたのは、紛れもなく聖女エイラその人である。
+普段は純白の法衣に身を包み、慈愛に満ちた微笑みで民衆を癒やす彼女。だが、レンズ越しに映る姿はあまりにも無惨だった。
+法衣は泥と正体不明の液体で薄汚れ、その手には庶民御用達の激安酒「ドワーフ殺し（アルコール度数40%、ラベルには『失明注意』の文字）」の空き瓶がしっかりと握りしめられている。
 
-「エイラ様！ お願いですから起きてください！ ここで見られたら終わりです！」
-「うるさい！ 私はここで寝るの！ 大地とお友達になるの！」
+彼女は石畳の冷たさを愛でるかのように、ゴロゴロと転がりながら、虚空に向かって管を巻き続けていた。
+「なんですか『聖女はトイレに行かない』って……行くよ！ 人間だもの！ なんなら今ここでしたろーか！？」
 
-青ざめた顔で彼女を引きずり起こそうとしているのは、聖女の筆頭護衛騎士であるＢ氏だ。
-彼は通りかかった本誌記者に気づくと、鬼の形相で駆け寄ってきた。
+## 必死の隠蔽工作を図る側近と、飛び交う怒号
 
-**「見なかったことにしろ！ 金なら払う！ 記事にしたら貴様らの出版社ごと焼き払うぞ！」**
-（※この時のＢ氏の恫喝音声は、本誌Web版の付録魔道具で再生可能です）
+「エイラ様！ エイラ様！？ お願いですから死んだふりだけはやめてください！！ パンツ見えてます！ 聖女のパンツが見えてます！！」
 
-## ストレスの限界か？
+顔面蒼白、冷や汗まみれで彼女の体をゆすっているのは、聖女親衛隊長の麗しき女騎士、Ｂ氏（24）だ。
+「氷の剣姫」として名高い彼女だが、この時ばかりはただのパニックに陥った介護者でしかなかった。
 
-聖女に近い関係者はこう語る。
-「最近のエイラ様は限界でした。連日の治癒活動に加え、王太子殿下との婚約破棄騒動や、派閥争いの矢面に立たされて……。『もう聖女辞めたい』『オークの嫁になりたい』と漏らすこともありました」
+「うるさい！ 私はここで寝るの！ 大地とお友達になるの！ ママ～、地面が回ってるよぉ～」
+「回りません！ 回っているのは貴方様の意識です！ さあ立ち上がってください！」
 
-翌日、教会は「聖女様は悪魔の呪いを受けた可哀想な方を見舞いに行き、その際に瘴気に当てられて倒れられた」という苦しい公式発表を行った。
-しかし、あの夜、彼女が叫んでいた**「王子のバカちんがぁああ！」**という言葉は、果たして瘴気のせいだったのだろうか。
+Ｂ氏は通りかかった本誌記者に気づくと、まるで魔王でも見たかのような鬼の形相で、聖剣の柄に手をかけながら詰め寄ってきた。
 
-信者の信仰心が試される一枚となっている。
+**「貴様！ どこのネズミだ！！ フィルムを出せ！ さもなくばこの私が貴様を物理的に浄化（消去）するぞ！！」**
 
-（文・王都芸能班）
+（※この時のＢ氏の、騎士道精神のかけらもない恫喝音声は本誌Web版の付録魔道具で再生可能です。着信音に設定する読者が急増中！）
+
+## 目撃者の証言「魔獣かと思った」
+
+現場近くの酒場で飲んでいたドワーフの男性（56）は、当時の様子をこう語る。
+
+「裏路地から『王子のバーカ！ 耳の穴にスライム詰め込んでやる！』っていう叫び声が聞こえてな。新手の魔獣かと思って覗いたら、聖女様が吐いてたんだよ。いやぁ、あの飲みっぷりは俺たちドワーフ顔負けだったね。『あと三本持ってこい！』って叫んでたぜ」
+
+また、近隣の宿屋の女将（42）も証言する。
+「最近よく見るよ、あの路地で飲んでる若い娘。フード被ってるから分かんなかったけど、まさか聖女様だったなんてねぇ……。『私の休みを返せ』『有給消化率ゼロパーセント』って呪詛みたいに呟いてたのが印象的だったわ」
+
+## ストレスの限界か？ 聖女を追い詰める「ブラック聖務」
+
+聖女に近い教会関係者は、声を潜めてさらに深刻な内部事情を明かす。
+
+「最近のエイラ様は限界でした。毎日の過重労働に加え、王太子の"定期"婚約破棄騒動。あの王子、発情期が来るたびに『真実の愛を見つけたから婚約破棄する』って呼び出すんですよ。エイラ様も慣れた手つきで『はいはい、お幸せに』って慰謝料請求書を叩きつけるんですが……数日後には王子が泣きついて復縁する、という無限ループで」
+
+さらに、関係者は王太子の**衝撃的な秘密**を暴露した。
+「殿下、実はそこそこ進行した若ハゲなんです。エイラ様は毎朝、莫大な魔力を消費して殿下の頭皮に『毛根再生（リジェネ・フォリクル）』をかけてるんですが……殿下はそのフサフサになった髪をなびかせて、新しい女をナンパしに行くんですよ。『俺の髪、絹糸みたいだろう？』って」
+
+「その髪、誰の魔力で生えてると思ってんのよ！ 私の血と涙の結晶でナンパしてんじゃないわよ！」
+路地裏に響いたあの絶叫は、あまりにも切実な魂の叫びだったのだ。
+
+先日は『もう人間やめたい』『来世はダンジョンの苔になりたい。誰にも踏まれず、光も浴びず、ジメジメ生きたい』と、大聖堂の祭壇の前で虚ろな目で呟いていたという目撃情報もある。
+
+翌日、教会は「聖女様は悪魔の呪いを受けた迷える子羊を救うため、自らその穢れを引き受けられた。現在、深い瞑想（二日酔い）に入られている」という、苦し紛れにもほどがある声明を発表。
+だが、あの夜彼女が夜空に吐き捨てた**「王子のピーマン頭ぁああ！ 中身空っぽかよ！ またハゲさせるぞ！」**という罵倒は、果たして慈愛の精神からくるものだったのだろうか。
+
+信じる者は救われる。しかし、この写真を見た後でも、あなたは彼女を「清廉潔白」と信じ続けられるだろうか。
+本誌は引き続き、聖女の”人間臭すぎる”生態を追う予定だ。
+
+（文・王都芸能班　潜入担当／写真・隠密パパラッチ隊）
