feat: Restrict data source creation to workspace administrators.

--- a/聖女泥酔スクープ記事.md
+++ b/聖女泥酔スクープ記事.md
@@ -16,8 +16,15 @@
 普段は純白の法衣に身を包み、慈愛に満ちた微笑みで民衆を癒やす彼女。だが、レンズ越しに映る姿はあまりにも無惨だった。
 法衣は泥と正体不明の液体で薄汚れ、その手には庶民御用達の激安酒「ドワーフ殺し（アルコール度数40%、ラベルには『失明注意』の文字）」の空き瓶がしっかりと握りしめられている。
 
+
 彼女は石畳の冷たさを愛でるかのように、ゴロゴロと転がりながら、虚空に向かって管を巻き続けていた。
 「なんですか『聖女はトイレに行かない』って……行くよ！ 人間だもの！ なんなら今ここでしたろーか！？」
+
+さらに衝撃的な光景が続く。彼女は懐から最高級の「万能解毒ポーション（エリクサー級）」を取り出すと、震える手で栓を抜き、一気に煽ったのだ。
+「これで……チャラ……！」
+しかし、アルコールとエリクサーの同時摂取は、魔力回路に甚大な負荷をかける禁忌の組み合わせ。次の瞬間、彼女は「うぷっ……おろろろろろろ」と、虹色に輝く吐瀉物を撒き散らした。
+「キラキラしてる……私のゲロ、宝石みたい……綺麗……」
+そう言って意識を手放すその姿は、ある意味で神々しくさえあった。
 
 ## 必死の隠蔽工作を図る側近と、飛び交う怒号
 
@@ -39,7 +46,7 @@
 
 現場近くの酒場で飲んでいたドワーフの男性（56）は、当時の様子をこう語る。
 
-「裏路地から『王子のバーカ！ 耳の穴にスライム詰め込んでやる！』っていう叫び声が聞こえてな。新手の魔獣かと思って覗いたら、聖女様が吐いてたんだよ。いやぁ、あの飲みっぷりは俺たちドワーフ顔負けだったね。『あと三本持ってこい！』って叫んでたぜ」
+「裏路地から『王子のバーカ！ 耳の穴にゲロ詰め込んでやる！』っていう叫び声が聞こえてな。新手の魔獣かと思って覗いたら、聖女様が吐いてたんだよ。いやぁ、あの飲みっぷりは俺たちドワーフ顔負けだったね。『あと三本持ってこい！』って叫んでたぜ」
 
 また、近隣の宿屋の女将（42）も証言する。
 「最近よく見るよ、あの路地で飲んでる若い娘。フード被ってるから分かんなかったけど、まさか聖女様だったなんてねぇ……。『私の休みを返せ』『有給消化率ゼロパーセント』って呪詛みたいに呟いてたのが印象的だったわ」
