docs: Update `prompts.md` to reflect current prompt configurations.

--- a/202603/名物ダンジョン記事.md
+++ b/202603/名物ダンジョン記事.md
@@ -9,6 +9,7 @@
 
 ## 1. まるで宝石箱！ デートならココ一択
 ### クリスタル・パレス（北・リゾート区画）
+![クリスタルパレス](クリスタルパレス.png)
 
 **「え、これダンジョンなの！？」** って驚くこと間違いなし！
 壁一面がキラッキラの発光クリスタルで覆われてて、もう幻想的すぎてヤバイ。
@@ -23,6 +24,7 @@
 
 ## 2. 山ガール必見！ 絶景とハイキング
 ### はじまりの洞窟（改）（南エリア）
+![はじまりの洞窟](はじまりの洞窟.png)
 
 「はじまりの洞窟」がリニューアルしてたって知ってた？
 なんと、中腹まで**自動ゴンドラ**で行けちゃうんです！
@@ -37,6 +39,7 @@
 
 ## 3. ちょっとワルいのがカッコいい？ 一攫千金の鉄板
 ### 鉄板迷宮（西・スラム地下）
+![鉄板迷宮](鉄板迷宮.png)
 
 「お上品な場所は飽きた」「金が欲しい」
 …そんなキミにはここ。通称『鉄板』。
@@ -51,6 +54,7 @@
 
 ## 4. まさに天空の楽園！ 憧れのVIPリゾート
 ### 天空リゾート『聖域エデン』（王都上空）
+![エデン](エデン.png)
 
 最後はここ！ みんなの憧れ、空に浮かぶ島『エデン』！
 入場料は高いけど、一生に一度は行きたいよね～。
