--- a/202603/女戦士.md
+++ b/202603/女戦士.md
@@ -13,7 +13,7 @@
 **ミラ**
 「“最強”って看板、あれは嘘じゃない。**でも、最強の作り方が汚い。**」
 
-![取材に応じるミラ氏](onnasenshi01.png)
+![取材に応じるミラ氏](女戦士.png)
 ▲「最強の作り方が汚い」と語るミラ氏（仮名）
 
 > ※本人保護のため、固有名詞・地名は一部伏せています。
