--- a/202603/現役騎士の犯罪記事.md
+++ b/202603/現役騎士の犯罪記事.md
@@ -3,6 +3,8 @@
 **「騎士崩れ（野盗化した元騎士）」の犯罪は、悲しいかな珍しい話ではない。主家を失い、食い扶持を稼ぐために剣を悪用する……。だが、今回発覚した事件は、それとは次元が違う。**
 **襲撃者の鎧には、はっきりと「王家の紋章」が刻まれていたのだ。**
 
+![犯罪騎士](犯罪騎士.png)
+
 ---
 
 ## 完璧すぎた襲撃計画
@@ -23,7 +25,7 @@
 
 ## 「守る者」が「狩る者」へ
 
-これまでの「騎士による犯罪」は、あくまで地位を失った者たちの犯行だった。
+これまでの「騎士による犯罪」は、あくまで地位を失った者たち、いわゆる「騎士団くずれ」の犯行であると相場が決まっていた。
 しかし今回は、現役の騎士が、騎士としての権限と情報を利用して強盗を行っている疑いが濃厚だ。
 彼らは昼間は「正義の味方」として市民に微笑みかけ、夜になると「仮面」をつけて同じ市民を襲う。
 
