--- a/202603/聖女泥酔スクープ記事.md
+++ b/202603/聖女泥酔スクープ記事.md
@@ -3,6 +3,8 @@
 **国民の9割が信奉し、「歩く浄化槽」「清貧と貞淑の擬人化」とまで謳われる聖女エイラ（19）。**
 **しかし本誌は、その神聖なヴェールを容赦なく剥ぎ取る、衝撃的すぎる瞬間を捉えた。深夜の路地裏、安酒と汚物にまみれて大の字でいびきをかくその姿に、あなたは明日も祈りを捧げることができるだろうか？**
 
+![聖女泥酔スクープ記事](聖女泥酔01.png)
+
 ---
 
 ## 「ヒールじゃ……ヒック！ ストレスは癒せねえんだよぉおお！」
@@ -14,26 +16,61 @@
 
 そこにいたのは、紛れもなく聖女エイラその人である。
 普段は純白の法衣に身を包み、慈愛に満ちた微笑みで民衆を癒やす彼女。だが、レンズ越しに映る姿はあまりにも無惨だった。
-法衣は泥と正体不明の液体で薄汚れ、その手には庶民御用達の激安酒「ドワーフ殺し（アルコール度数40%、ラベルには『失明注意』の文字）」の空き瓶がしっかりと握りしめられている。
+法衣は泥と正体不明の液体で薄汚れ、その手には庶民御用達の激安酒「ドラゴン殺し（アルコール度数96%、通称『飲む爆薬』）」の空き瓶がしっかりと握りしめられている。
 
 
 彼女は石畳の冷たさを愛でるかのように、ゴロゴロと転がりながら、虚空に向かって管を巻き続けていた。
-「なんですか『聖女はトイレに行かない』って……行くよ！ 人間だもの！ なんなら今ここでしたろーか！？」
+「なんですか『聖女はうんこしない』って……するよ！ 人間だもの！ なんなら今ここでしたろーか！？」
 
 さらに衝撃的な光景が続く。彼女は懐から最高級の「万能解毒ポーション（エリクサー級）」を取り出すと、震える手で栓を抜き、一気に煽ったのだ。
-「これで……チャラ……！」
+「これで……今日の罪は……ぜんぶチャラ……！」
 しかし、アルコールとエリクサーの同時摂取は、魔力回路に甚大な負荷をかける禁忌の組み合わせ。次の瞬間、彼女は「うぷっ……おろろろろろろ」と、虹色に輝く吐瀉物を撒き散らした。
 「キラキラしてる……私のゲロ、宝石みたい……綺麗……」
 そう言って意識を手放すその姿は、ある意味で神々しくさえあった。
+***
+
+![ドラゴン殺し](ドラゴン殺し.png)
+**【本日の凶器】激安酒「ドラゴン殺し」**
+アルコール度数96%。通称「飲む火種」。一口で喉が焼け、二口で理性が飛び、三口で神に会えると言われる劇物。本来はドワーフが凍死寸前の時にのみ使用を許可される。
+
+![万能ポーション](万能ポーション.png)
+**【本日の無駄遣い】万能解毒ポーション（エリクサー級）**
+国宝級の解毒薬。致死性の猛毒すら瞬時に中和するが、二日酔いに使うなど金貨をドブに捨てるごとき暴挙。無駄に虹色に発光しており、深夜の路地裏を怪しく照らしていた。
+
+***
+
+
+***
+
+### 【編集部・極秘入手】 禁断の裏カクテル「聖女の休日（ホーリー・バケーション）」
+
+現場に残された空き瓶の比率から、彼女が愛飲していたと思われる狂気的なカクテルのレシピを再現した。
+
+**【材料】**
+- 激安酒「ドラゴン殺し」：グラス9割
+- 万能解毒ポーション：1割（チェイサー代わり）
+
+**【作り方】**
+1. 「ドラゴン殺し」をグラスの表面張力ギリギリまで注ぐ。
+2. 「私の青春を返せ！」と叫びながら、ポーションを一気に混入する。
+3. 化学反応で虹色の爆煙が上がったら飲み頃。
+
+**【味と効能】**
+アルコールによる食道・内臓の破壊を、エリクサー成分が即座に「超回復」させることで、肉体が破壊と再生の無限ループに突入する。
+この際、脳内に発生するドーパミンは致死量寸前。一口飲むだけで、悩みも将来への不安も、物理的にどうでもよくなる（IQが3になるため）。
+「口の中で花火大会が起きてる」「神様が盆踊りしてるのが見える」など、被験者からはうわごとのような感想が寄せられた。
+※素人は即死するため、絶対に真似をしないこと。
+
+***
 
 ## 必死の隠蔽工作を図る側近と、飛び交う怒号
 
-「エイラ様！ エイラ様！？ お願いですから死んだふりだけはやめてください！！ パンツ見えてます！ 聖女のパンツが見えてます！！」
+「エイラ様！ エイラ様！？ お願いですから死んだふりだけはやめてください！！ パンツ見えてます！ 聖女の神々しいパンツが見えてます！！」
 
 顔面蒼白、冷や汗まみれで彼女の体をゆすっているのは、聖女親衛隊長の麗しき女騎士、Ｂ氏（24）だ。
 「氷の剣姫」として名高い彼女だが、この時ばかりはただのパニックに陥った介護者でしかなかった。
 
-「うるさい！ 私はここで寝るの！ 大地とお友達になるの！ ママ～、地面が回ってるよぉ～」
+「うるさい！ 私はここで寝るの！ 石畳の精霊とお友達になるの！ ママ～、地面が回ってるよぉ～」
 「回りません！ 回っているのは貴方様の意識です！ さあ立ち上がってください！」
 
 Ｂ氏は通りかかった本誌記者に気づくと、まるで魔王でも見たかのような鬼の形相で、聖剣の柄に手をかけながら詰め寄ってきた。
@@ -55,7 +92,7 @@
 
 聖女に近い教会関係者は、声を潜めてさらに深刻な内部事情を明かす。
 
-「最近のエイラ様は限界でした。毎日の過重労働に加え、王太子の"定期"婚約破棄騒動。あの王子、発情期が来るたびに『真実の愛を見つけたから婚約破棄する』って呼び出すんですよ。エイラ様も慣れた手つきで『はいはい、お幸せに』って慰謝料請求書を叩きつけるんですが……数日後には王子が泣きついて復縁する、という無限ループで」
+「最近のエイラ様は限界でした。毎日の過重労働に加え、王太子の"定期"婚約破棄騒動。あの王子、発情期が来るたびに『真実の愛を見つけたから婚約破棄する』ってエイラ様を呼び出すんですよ。エイラ様も慣れた手つきで『はいはい、お幸せに』って慰謝料請求書を叩きつけるんですが……数日後には王子が泣きついて復縁する、という無限ループで」
 
 さらに、関係者は王太子の**衝撃的な秘密**を暴露した。
 「殿下、実はそこそこ進行した若ハゲなんです。エイラ様は毎朝、莫大な魔力を消費して殿下の頭皮に『毛根再生（リジェネ・フォリクル）』をかけてるんですが……殿下はそのフサフサになった髪をなびかせて、新しい女をナンパしに行くんですよ。『俺の髪、絹糸みたいだろう？』って」
@@ -70,5 +107,22 @@
 
 信じる者は救われる。しかし、この写真を見た後でも、あなたは彼女を「清廉潔白」と信じ続けられるだろうか。
 本誌は引き続き、聖女の”人間臭すぎる”生態を追う予定だ。
+
+
+***
+
+### 【余談】王都（オウト）に蔓延る「オウト」の怪
+
+最近、王都の裏路地にて奇妙な新種スライムが発見された。
+七色に輝く美しい流体だが、近づくと**度数96%のアルコール臭**が鼻をつく。さらに、触れたアンデッドを一瞬で浄化するほどの聖なる力を秘めているという。
+冒険者たちはこの謎の生物を、発生源への"篤い信仰心"と敬意を込めてこう名付けた。
+
+**「聖女のゲロ（ホーリー・スライム）」**
+
+![聖女のゲロ](聖女のゲロ.png)
+
+まさに王都（オウト）がオウトに沈む……なんて駄洒落を言っている場合ではない。被害（主に悪臭）は拡大中だ。衛生局の早急な対応が待たれる。
+
+***
 
 （文・王都芸能班　潜入担当／写真・隠密パパラッチ隊）
