Please provide the file changes (diffs) for me to summarize.

--- a/資料/カタログ.md
+++ b/資料/カタログ.md
@@ -8,14 +8,14 @@
 
 ## 1. 隷属の首輪（カオス・チョーカー）
 *   **闇市相場：** 金貨50枚～
-*   **効果：** 対象の首に装着し、魔力を通すと、装着者は主人の命令に逆らえなくなる。思考そのものを書き換える強力な洗脳作用あり。
+*   **効果：** 対象の首に装着し、魔力を通すと、装着者は主人の命令に逆らえなくなる。それどころか、命令に従う瞬間に脳髄を焼くほどの強烈な快楽が与えられるため、進んで隷属を望むようになる。
 *   **危険性：** 王国法で所持・売買共に死刑対象。さらに、安物は暴走して装着者の首を飛ばす事故が多発中。
 *   **入手ルートとされる場所：** 貧民街の古道具屋の合言葉「良い首輪ある？」
 
 ## 2. 偽りの英雄剣（カース・ブリンガー）
 *   **闇市相場：** 金貨100枚～
 *   **効果：** 誰でも剣聖並みの剣技が使えるようになる。
-*   **危険性：** 使用者の「生命力」を魔力に変換して動くため、使うたびに激しく老化する。20代の若者が数回の使用で老衰死した事例も。
+*   **危険性：** 斬った敵の生命力をエネルギー源とするが、攻撃が外れると「使用者」からエネルギーを徴収する理不尽仕様。一度の空振りで寿命が10年縮むため、極度のプレッシャーで自滅する者が後を絶たない。
 *   **入手ルートとされる場所：** ダンジョン入口に出没する謎の行商人
 
 ## 3. 痛覚遮断の指輪（ペイン・キラー・リング）
@@ -23,42 +23,42 @@
 *   **効果：** あらゆる痛みを完全に無効化する。
 *   **危険性：** ダメージそのものは消えない。「腕が切断されているのに気づかず戦い続け、出血多量で死亡」というケースが後を絶たない。初心者冒険者が騙されて買わされる代表格。
 
-## 4. 魅惑の香水（サキュバス・ポーション）
+## 4. 魅惑の香水（サキュバス・バースト・ポーション）
 *   **闇市相場：** 銀貨50枚（小瓶）
 *   **効果：** 異性を強烈に惹きつけるフェロモンを放つ。
-*   **危険性：** 効果が強すぎて、人間だけでなくゴブリンやオークあでも呼び寄せてしまう。「モテすぎて死ぬ」を地で行くアイテム。
+*   **危険性：** 効果が強すぎて、人間だけでなくゴブリンやオークまでも呼び寄せてしまう。「モテすぎて死ぬ」を地で行くアイテム。
 
 
 ## 5. 透視の魔眼（ピープ・アイ）
 *   **闇市相場：** 金貨80枚
 *   **効果：** 服や壁を透視できる。
-*   **危険性：** 使用中、激しい頭痛と共に視力が低下し、最終的に失明する。「深淵を覗くとき、深淵もまた…」の通り、見てはいけないもの（悪霊など）まで見えるようになり発狂する者も。
+*   **危険性：** 使用中、激しい頭痛と共に視力が低下し、最終的に眼球が爆発する。「深淵を覗くとき、深淵もまた…」の通り、見てはいけないもの（悪霊など）まで見えるようになり発狂する者も。自爆テロリストと相性が良い。
 
 ## 6. （偽）エリクサー
 *   **闇市相場：** 金貨10枚
 *   **効果：** どんな怪我も一瞬で治る（ように感じる）。
-*   **危険性：** 実際は強力な麻薬成分で痛みを飛ばし、興奮状態にしているだけ。傷は悪化しており、効果が切れた瞬間に激痛と共にショック死する。
+*   **危険性：** 強力な再生促進剤だが、細胞の制御が効かない欠陥品。傷口から腕が生えたり、目玉が増殖したりといった異形化を招く。「治ったが、人間ではなくなった」という悲劇を生む劇薬。わかってて使う人もいる。
 
 ## 7. 強欲の財布（グリード・ウォレット）
 *   **闇市相場：** 金貨5枚
 *   **効果：** 入れた金貨が翌日には倍になる。
-*   **危険性：** 倍になるのは「幻影」。数日経つと元の金貨ごと消滅する。さらに、持ち主の金運を吸い尽くし、破産するまで不運が続く呪い付き。
+*   **危険性：** 本当に増えるが、その代償として所持者の「不幸」や「凶悪な魔物との遭遇率」が激増する。街中だろうとドラゴンが降ってくるレベルの災厄に見舞われるため、逆にこれを利用してレベル上げをする命知らずもいる。
 
-## 8. 身代わり人形（スケープ・ドール）
+## 8. 身代わり人形（スケープ・ラブドール）
 *   **闇市相場：** 金貨200枚
 *   **効果：** 致命傷を負った際、一度だけ人形が身代わりになってくれる。
-*   **危険性：** 身代わりになったダメージは、ランダムで「親しい人間」に転送される。自分は助かるが、実家のまたいとこや恋人が突然謎の死を遂げることになる。
+*   **危険性：** 身代わりになった人形は、使用者の「親しい人間」を殺しに行く凶悪な魔物となる。自分が助かった代償として、最愛の人物が目の前で惨殺される地獄を見る。
 
 
 ## 9. 盗聴の巻貝（ウィスパー・シェル）
 *   **闇市相場：** 銀貨80枚
 *   **効果：** 遠くの会話が聞こえるようになる。
-*   **危険性：** 「聞きたくない声（悪口、陰口、浮気現場）」ばかり優先的に拾う性格の悪い呪物。精神を病んで捨てる人が続出。
+*   **危険性：** 「聞きたくない声（悪口、陰口、浮気現場）」ばかり優先的に拾う性格の悪い呪物。さらに、一度使うと「幻聴」として定着し、貝を手放しても一生他人の悪意ある声が聞こえ続けるようになる。精神が崩壊するまで逃れられない。
 
 ## 10. ゾンビ作成の札（ネクロ・タグ）
 *   **闇市相場：** 金貨150枚
 *   **効果：** 死体に貼ると蘇る。
-*   **危険性：** 蘇るのは間違いなく「ゾンビ」。知性はなく、貼った本人を最初に襲う事例が9割。残り1割は腐敗が止まらず異臭騒ぎで通報される。
+*   **危険性：** 蘇るのは間違いないが、ゾンビである。基本的に知性はなく、貼った本人を最初に襲う事例が9割。残り1割は本人の知性はあるが、腐敗が止まらず地獄をみる。
 
 ## 11. 飛行の靴（イカロス・ブーツ）
 *   **闇市相場：** 金貨300枚
