feat: Implement stop button and disable chat input/send during streaming.

--- a/資料/カタログ.md
+++ b/資料/カタログ.md
@@ -58,27 +58,27 @@
 ## 10. ゾンビ作成の札（ネクロ・タグ）
 *   **闇市相場：** 金貨150枚
 *   **効果：** 死体に貼ると蘇る。
-*   **危険性：** 蘇るのは間違いないが、ゾンビである。基本的に知性はなく、貼った本人を最初に襲う事例が9割。残り1割は本人の知性はあるが、腐敗が止まらず地獄をみる。
+*   **危険性：** 貼られると9割はゾンビとなる。1割は完全に復活し、死者は蘇り、知性も完全に戻る。だが、肉体の腐敗は絶対に止まらない。意識がはっきりしたまま、自分の体が腐り落ちていく激痛と恐怖を味わい続けることになる。かつてこの生ゾンビを作成し、売買する邪悪な組織が問題となった。
 
 ## 11. 飛行の靴（イカロス・ブーツ）
 *   **闇市相場：** 金貨300枚
 *   **効果：** 空を自由に飛べるようになる。
-*   **危険性：** 高度制限がないため、成層圏まで上昇して凍死するか、魔力切れで落下死するかの二択。「着陸機能」が別売りの詐欺商品。
+*   **危険性：** 高度を下げる機能がないため、大概は成層圏まで上昇して凍死するか、魔力切れで落下死する。まれに足だけ千切れて飛んでいくこともある。「着陸機能」が別売りの詐欺商品。暗殺道具として大ヒットした。
 
 ## 12. 無限の水筒（スワンプ・フラスコ）
 *   **闇市相場：** 金貨40枚
 *   **効果：** 水が無限に湧き出る。
-*   **危険性：** 出てくる水は「毒沼の泥水」。飲めないし、蓋を開けっ放しにすると部屋が水没して大惨事に。
+*   **危険性：** 無色透明だが粘性があり、飲むと喉に詰まる「お餅水」である。人体に吸収されることもなく、排出されることもない。しばしばパッキンが劣化して水漏れし、災害を引き起こす。
 
 ## 13. ドッペルゲンガーの鏡（ミラー・イメージ）
 *   **闇市相場：** 金貨500枚
 *   **効果：** 自分と瓜二つの分身を作り出す。
-*   **危険性：** 分身は本体を殺して成り代わろうとする。寝ている間に首を絞められるリスクと隣り合わせ。
+*   **危険性：** 本体が起きているときは言うことを聞くが、寝ているときは本体を殺して成り代わろうとする。
 
 ## 14. 万能鍵（スケルトン・キー）
 *   **闇市相場：** 金貨120枚
 *   **効果：** どんな扉も開けられる。
-*   **危険性：** 開けた瞬間、扉の向こうの警報装置が作動するか、魔物が召喚される罠付き。「強盗逮捕率No.1」の皮肉なアイテム。
+*   **危険性：** ただし、押し上げたピンの数だけ必ず骨折する。
 
 ## 15. 幸運のサイコロ（デビル・ダイス）
 *   **闇市相場：** 金貨10枚
