Please provide the file changes to generate an accurate commit message.

--- a/資料/カタログ.md
+++ b/資料/カタログ.md
@@ -68,7 +68,7 @@
 ## 12. 無限の水筒（スワンプ・フラスコ）
 *   **闇市相場：** 金貨40枚
 *   **効果：** 水が無限に湧き出る。
-*   **危険性：** 無色透明だが粘性があり、飲むと喉に詰まる「お餅水」である。人体に吸収されることもなく、排出されることもない。しばしばパッキンが劣化して水漏れし、災害を引き起こす。
+*   **危険性：** この水は飲んでも乾きが癒えることはないし、身体に吸収されることもない。無限に飲むことが可能でもあり、「蜃気楼水」と呼ばれる。
 
 ## 13. ドッペルゲンガーの鏡（ミラー・イメージ）
 *   **闇市相場：** 金貨500枚
@@ -83,11 +83,11 @@
 ## 15. 幸運のサイコロ（デビル・ダイス）
 *   **闇市相場：** 金貨10枚
 *   **効果：** ギャンブルで必ず勝てる。
-*   **危険性：** 勝った金額と同じ価値の「寿命」や「内臓機能」が没収される。大勝ちした翌日に心不全で死ぬケース多数。
+*   **危険性：** 勝った金額と同じ価値の「寿命」や大切なもの、すなわち「内臓機能」「地位」「名誉」「家族」などが取立人によって没収される。大勝ちした翌日に心不全で死ぬケース多数。
 
 ## 16. 翻訳の飴（バベル・ドロップ）
 *   **闇市相場：** 銀貨30枚
-*   **効果：** 舐めている間、あらゆる言語が話せる。
+*   **効果：** 舐めている間、あらゆる言語が話せる。それは人語に限定されず、神の言語も使用可能であるという。
 *   **危険性：** 副作用で、元の母国語を忘れる。さらに効果が切れると、一切の言葉が話せず「鳴き声」しか出せなくなる。
 
 ## 17. 千里眼の水晶（ピーピング・オーブ）
@@ -159,6 +159,17 @@
 *   **闇市相場：** 金貨1枚
 *   **効果：** 持っていると幸せが訪れる。
 *   **危険性：** 鳥が幸せになるために、持ち主から餌（金品、食料、家財）を奪いまくる。鳥だけが太って持ち主は餓死する。
+
+
+## 31. 底なしの巾着（カオス・ポーチ）
+*   **闇市相場：** 金貨40枚
+*   **効果：** いくらでも物が入る。
+*   **危険性：** 取り出す際、何が出てくるかランダム。回復薬と思ったら爆弾が出ることも。また、手を入れるとたまに指を噛まれる。
+
+## 32. 帰還の石（ホーム・ラン・ストーン）
+*   **闇市相場：** 金貨90枚
+*   **効果：** 一瞬で自宅（拠点）に帰れる。
+*   **危険性：** 自分「だけ」帰れる。装備品・衣服はすべてその場に残されるため、全裸で実家のリビングに転送される羞恥プレイ確定。
 
 ---
 
