Please provide the file changes to generate a commit message.

--- a/資料/カタログ.md
+++ b/資料/カタログ.md
@@ -98,17 +98,17 @@
 ## 18. 怪力の腕輪（オーガ・バングル）
 *   **闇市相場：** 金貨60枚
 *   **効果：** 大岩も砕く怪力が手に入る。
-*   **危険性：** 筋力に骨と腱が耐えられず、パンチ一発で自分の腕が粉砕骨折する。回復魔法代の方が高くつく。
+*   **危険性：** 恐るべき筋肉痛で脳が焼き切れる。
 
 ## 19. 忘却の砂（オブリビオン・サンド）
 *   **闇市相場：** 銀貨40枚
 *   **効果：** 嫌な記憶を消せる魔法の砂。
-*   **危険性：** 調整が効かず、名前や呼吸の仕方まで忘れて廃人になるリスクあり。
+*   **危険性：** たいへんな依存性がある。
 
 ## 20. 惚れ薬・改（ラブ・ポーション・No.99）
 *   **闇市相場：** 金貨80枚
-*   **効果：** 飲ませた相手を強制的に惚れさせる。
-*   **危険性：** 愛情が「ストーカー気質」に歪んで増幅される。刺される、監禁されるなどの結末を迎える率100%。
+*   **効果：** 飲ませた相手を強制的に惚れさせるが、効果が切れるとキスがスイッチとなって爆発する。
+*   **危険性：** 爆発は物理。威力は半径50mを消し飛ばすレベル。愛する人に吹き飛ばされたくなければ、あるいは愛する人を木っ端微塵にしないためには、死ぬまでこの高価な薬を買い続けなければならない。「愛」という名のサブスクリプション地獄。
 
 ## 21. 影踏みの短剣（シャドウ・ダガー）
 *   **闇市相場：** 金貨110枚
