Please provide the file changes to generate a commit message.

--- a/資料/カタログ.md
+++ b/資料/カタログ.md
@@ -10,18 +10,18 @@
 *   **闇市相場：** 金貨50枚～
 *   **効果：** 対象の首に装着し、魔力を通すと、装着者は主人の命令に逆らえなくなる。それどころか、命令に従う瞬間に脳髄を焼くほどの強烈な快楽が与えられるため、進んで隷属を望むようになる。
 *   **危険性：** 王国法で所持・売買共に死刑対象。さらに、安物は暴走して装着者の首を飛ばす事故が多発中。
-*   **入手ルートとされる場所：** 貧民街の古道具屋の合言葉「良い首輪ある？」
+*   **入手ルートとされる場所：** 貧民街の雑居ビルの古道具屋の合言葉「散歩の時間だ」
 
 ## 2. 偽りの英雄剣（カース・ブリンガー）
 *   **闇市相場：** 金貨100枚～
 *   **効果：** 誰でも剣聖並みの剣技が使えるようになる。
-*   **危険性：** 斬った敵の生命力をエネルギー源とするが、攻撃が外れると「使用者」からエネルギーを徴収する理不尽仕様。一度の空振りで寿命が10年縮むため、極度のプレッシャーで自滅する者が後を絶たない。
-*   **入手ルートとされる場所：** ダンジョン入口に出没する謎の行商人
+*   **危険性：** 斬った敵の生命力をエネルギー源とするが、攻撃が外れると「使用者」からエネルギーを徴収する理不尽仕様。一度の空振りで寿命が10年縮むため、極度のプレッシャーで自滅する者が後を絶たない。また、通常時でもエネルギーを必要とするため、使用者はしばしば辻斬り化する。
+*   **入手ルートとされる場所：** 剣の墓と呼ばれる廃棄場ダンジョン。
 
-## 3. 痛覚遮断の指輪（ペイン・キラー・リング）
+## 3. 痛喰らいの虫の卵（ペイン・イーター・エッグ）
 *   **闇市相場：** 金貨30枚
-*   **効果：** あらゆる痛みを完全に無効化する。
-*   **危険性：** ダメージそのものは消えない。「腕が切断されているのに気づかず戦い続け、出血多量で死亡」というケースが後を絶たない。初心者冒険者が騙されて買わされる代表格。
+*   **効果：** 飲み込むか傷口に擦り込むことで体内に寄生し、孵化した幼虫が宿主のあらゆる痛みを食べて完全に無効化する。
+*   **危険性：** ダメージそのものは消えない。「腕が切断されているのに気づかず戦い続け、出血多量で死亡」というケースが後を絶たない。また、ペイン・イーターは常に痛みを求めるため、使用者の中枢神経に作用して自傷行為に走らせるようになる。カプセル剤と偽り、初心者冒険者に売りつけられる代表格。
 
 ## 4. 魅惑の香水（サキュバス・バースト・ポーション）
 *   **闇市相場：** 銀貨50枚（小瓶）
@@ -58,7 +58,7 @@
 ## 10. ゾンビ作成の札（ネクロ・タグ）
 *   **闇市相場：** 金貨150枚
 *   **効果：** 死体に貼ると蘇る。
-*   **危険性：** 貼られると9割はゾンビとなる。1割は完全に復活し、死者は蘇り、知性も完全に戻る。だが、肉体の腐敗は絶対に止まらない。意識がはっきりしたまま、自分の体が腐り落ちていく激痛と恐怖を味わい続けることになる。かつてこの生ゾンビを作成し、売買する邪悪な組織が問題となった。
+*   **危険性：** 貼られると9割はゾンビとなる。1割は完全に復活し、死者は蘇り、知性も完全に戻る。だが、その際も肉体の腐敗は絶対に止まらない。意識がはっきりしたまま、自分の体が腐り落ちていく激痛と恐怖を味わい続けることになる。かつてこの生ゾンビを作成し、売買する邪悪な組織が問題となった。
 
 ## 11. 飛行の靴（イカロス・ブーツ）
 *   **闇市相場：** 金貨300枚
@@ -88,17 +88,17 @@
 ## 16. 翻訳の飴（バベル・ドロップ）
 *   **闇市相場：** 銀貨30枚
 *   **効果：** 舐めている間、あらゆる言語が話せる。それは人語に限定されず、神の言語も使用可能であるという。
-*   **危険性：** 副作用で、元の母国語を忘れる。さらに効果が切れると、一切の言葉が話せず「鳴き声」しか出せなくなる。
+*   **危険性：** 副作用で脳が溶け、元の母国語を忘れる。さらに効果が切れると、一切の言葉が話せず「鳴き声」しか出せなくなる。
 
-## 17. 千里眼の水晶（ピーピング・オーブ）
-*   **闇市相場：** 金貨90枚
-*   **効果：** 遠隔地の映像が見える。
-*   **危険性：** 向こうからもこちらが見える。覗いていた対象（特に強力な魔導師や魔物）と目が合い、呪いを返される事故が多発。
+## 17. 無限の干し肉（トロール・ジャーキー）
+*   **闇市相場：** 銀貨50枚
+*   **効果：** どれだけかじっても、瞬時に再生して元の大きさに戻る魔法の保存食。
+*   **危険性：** 材料は再生力が強すぎるトロールの死肉。胃の中に到達すると宿主の血肉を吸い取りながら急速に自己増殖し、最終的に宿主の腹を突き破って肉塊や子トロールが誕生する。食費を浮かせたい貧乏冒険者がよく犠牲になる。
 
 ## 18. 怪力の腕輪（オーガ・バングル）
 *   **闇市相場：** 金貨60枚
 *   **効果：** 大岩も砕く怪力が手に入る。
-*   **危険性：** 恐るべき筋肉痛で脳が焼き切れる。
+*   **危険性：** 恐るべき筋肉痛で脳が焼き切れる。しばしば痛喰らいの虫の卵（ペイン・イーター・エッグ）と併用される。
 
 ## 19. 忘却の砂（オブリビオン・サンド）
 *   **闇市相場：** 銀貨40枚
@@ -118,7 +118,7 @@
 ## 22. 悪夢の枕（ナイトメア・ピロー）
 *   **闇市相場：** 銀貨20枚
 *   **効果：** 楽しい夢が見られる（という触れ込み）。
-*   **危険性：** 実際はサキュバスの餌食になる枕。精気を吸い尽くされ、二度と目覚めなくなる。
+*   **危険性：** 実際はサキュバス・イエス・ノー・マクラと呼ばれ、サキュバスに吸い尽くされることを了承する枕。精気を吸い尽くされ、二度と目覚めなくなる場合もあるが、当たりのサキュバスにあたることもある。
 
 ## 23. 透明化のマント（インビジブル・クローク）
 *   **闇市相場：** 金貨400枚
