Please provide the file changes to generate a commit message.

--- a/資料/カタログ.md
+++ b/資料/カタログ.md
@@ -112,8 +112,8 @@
 
 ## 21. 影踏みの短剣（シャドウ・ダガー）
 *   **闇市相場：** 金貨110枚
-*   **効果：** 影を刺すと本体も動けなくなる。
-*   **危険性：** 影が実体化して襲ってくる。自分の影に殺されると、自分が新たな影として地面を這いずることになる。
+*   **効果：** 対象の影を切り取り、影から秘密の情報を聞き出すことができる。
+*   **危険性：** 影は使用者の影を吸っており、吸い尽くされると使用者は他人から一切認識されなくなる。
 
 ## 22. 悪夢の枕（ナイトメア・ピロー）
 *   **闇市相場：** 銀貨20枚
@@ -122,8 +122,8 @@
 
 ## 23. 透明化のマント（インビジブル・クローク）
 *   **闇市相場：** 金貨400枚
-*   **効果：** 姿を消せる。
-*   **危険性：** 存在感まで消えすぎて、誰からも認識されなくなり、最終的に物理的に透過して地面に沈んでいく。
+*   **効果：** 羽織ることで完全に姿を消すことができる。
+*   **危険性：** マントの正体は透明化能力を持つ薄型のスライム。使用中は麻酔成分を含んだ消化液でゆっくりと体を溶かされるため、気づいた時には手足がなくなっている。
 
 ## 24. 時間停止の砂時計（クロノ・グラス）
 *   **闇市相場：** 金貨1000枚～
