Please provide the file changes to generate a commit message.

--- a/資料/カタログ.md
+++ b/資料/カタログ.md
@@ -127,8 +127,8 @@
 
 ## 24. 時間停止の砂時計（クロノ・グラス）
 *   **闇市相場：** 金貨1000枚～
-*   **効果：** 時間を止める。
-*   **危険性：** 自分も止まる。永遠に停止した時間の中で意識だけがあり続ける地獄を味わう。解除するには外部からの干渉が必要だが、時間は止まっているので誰も助けに来ない。
+*   **効果：** 対象の周囲の時間を球状に停止させる。生鮮食品などの完璧な「保存」や、生けどりが難しい危険な生体の「捕獲」に非常に便利。
+*   **危険性：** 砂時計の砂が完全に落ち切るまで、対象を取り出すことは絶対に不可能。さらに致命的なことに「途中で砂が詰まって止まる」粗悪品が流通の半数を占める。その場合、対象物は永遠に時間停止の球体に閉じ込められ、生きたまま最高の鮮度で展示され続けるだけのオブジェと化す。死霊術師が愛人の保存によく使う。
 
 ## 25. 鑑定虫眼鏡（アナライズ・レンズ）
 *   **闇市相場：** 金貨70枚
